enabling pause/play, mute/unmute, progress bar, need to fix button full screen text

--- a/assets/style/_variables.scss
+++ b/assets/style/_variables.scss
@@ -1,12 +1,13 @@
 //COLORS
 $redYoutubeColor: #f00;
 $backgroundColor: #eeeaea;
-$progressBarBackgroundColor: #8b8b8b;
+$progressBarBackgroundColor: #f1f1f1;
 $transparentBackground: transparent;
 $whiteColor: #fefefe;
 $firstBlackColor: rgba(0, 0, 0, 0.3);
-$secondBlackColor: rgba(0, 0, 0, 0.5);
+$secondBlackColor: rgba(0, 0, 0, 0.4);
 $thirdBlackColor: rgba(0, 0, 0, 0.6);
 
 //RADIUS
 $smallBorderRadius: 4px;
+$biggerBorderRadius: 8px;
