--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -28,7 +28,6 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  cursor: pointer;
 }
 
 .video-container {
@@ -45,6 +44,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  cursor: pointer;
 }
 
 .playback-button {
@@ -84,8 +84,10 @@ video {
   padding: 12px;
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.5)));
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5));
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.4)));
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4));
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
 }
 
 .video-controls.hide {
@@ -112,7 +114,7 @@ progress {
 }
 
 progress::-webkit-progress-bar {
-  background-color: #8b8b8b;
+  background-color: #f1f1f1;
   border-radius: 4px;
 }
 
@@ -206,6 +208,10 @@ button {
   background-color: transparent;
 }
 
+button * {
+  pointer-events: none;
+}
+
 button::before {
   content: attr(data-title);
   position: absolute;
@@ -222,10 +228,6 @@ button::before {
 
 button:hover::before {
   display: inline-block;
-}
-
-button * {
-  pointer-events: none;
 }
 
 .fullscreen-button {
@@ -309,6 +311,10 @@ input[type=range].volume::-webkit-slider-thumb {
 input[type=range].volume::-moz-range-thumb {
   border: 1px solid #fefefe;
   background: #fefefe;
+}
+
+.hidden {
+  display: none;
 }
 
 svg {
