--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -23,7 +23,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    cursor: pointer;
 }
 
 .video-container {
@@ -33,6 +32,7 @@ body {
     margin: 0 auto;
     flex-direction: column;
     justify-content: center;
+    cursor: pointer;
 }
 
 .playback-button {
@@ -66,6 +66,8 @@ video {
     padding: 12px;
     transition: all 0.2s ease;
     background-image: linear-gradient(to bottom, $firstBlackColor, $secondBlackColor);
+    border-bottom-left-radius: $biggerBorderRadius;
+    border-bottom-right-radius: $biggerBorderRadius;
 }
 
 .video-controls.hide {
@@ -169,13 +171,16 @@ button {
     border: none;
     outline: none;
     background-color: $transparentBackground;
+    & * {
+        pointer-events: none;
+    }
     &::before {
         content: attr(data-title);
         position: absolute;
         display: none;
         right: 0;
         top: -50px;
-        background-color: rgba(0, 0, 0, 0.6);
+        background-color: $thirdBlackColor;
         color: #fff;
         font-weight: bold;
         padding: 4px 6px;
@@ -185,10 +190,6 @@ button {
     &:hover::before {
         display: inline-block;
     }
-}
-
-button * {
-    pointer-events: none;
 }
 
 .fullscreen-button {
@@ -263,9 +264,9 @@ input[type=range].volume {
     }
 }
 
-// .hidden {
-//     display: none;
-// }
+.hidden {
+    display: none;
+}
 
 svg {
     width: 28px;
