playback rate simple design

--- a/assets/style/_variables.scss
+++ b/assets/style/_variables.scss
@@ -7,6 +7,10 @@ $whiteColor: #fefefe;
 $firstBlackColor: rgba(0, 0, 0, 0.3);
 $secondBlackColor: rgba(0, 0, 0, 0.4);
 $thirdBlackColor: rgba(0, 0, 0, 0.6);
+$buttonHover: rgb(202, 190, 190);
+
+//FONTS
+$font: 'Source Sans Pro', sans-serif;
 
 //RADIUS
 $smallBorderRadius: 4px;
