--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -326,9 +326,8 @@ svg {
 }
 
 .playback-rate-buttons {
-  position: absolute;
-  margin-left: 22%;
-  margin-top: 20.3%;
+  margin-bottom: -8px;
+  margin-left: 1.5%;
   max-width: 100%;
   font-family: "Source Sans Pro", sans-serif;
   font-size: 16px;
@@ -346,14 +345,11 @@ svg {
 }
 
 .playback-rate-buttons button:hover {
-  color: #cabebe;
+  color: lightgray;
 }
 
-p {
-  position: absolute;
+.playback-rate-buttons .playback {
   color: #fefefe;
-  margin-left: 5%;
-  margin-top: 20.2%;
   font-family: "Source Sans Pro", sans-serif;
 }
 /*# sourceMappingURL=style.css.map */
