--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -277,9 +277,8 @@ svg {
 }
 
 .playback-rate-buttons {
-    position: absolute;
-    margin-left: 22%;
-    margin-top: 20.3%;
+    margin-bottom: -8px;
+    margin-left: 1.5%;
     max-width: 100%;
     font-family: $font;
     font-size: 16px;
@@ -294,13 +293,11 @@ svg {
             color: $buttonHover;
         }
     }
+    .playback {
+        color: $whiteColor;
+        font-family: $font;
+    }
 }
 
-p {
-    position: absolute;
-    color: $whiteColor;
-    margin-left: 5%;
-    margin-top: 20.2%;
-    font-family: $font;
-}
+
 
