add/remove playback rate fix

--- a/assets/style/_variables.scss
+++ b/assets/style/_variables.scss
@@ -1,6 +1,6 @@
 //COLORS
 $redYoutubeColor: #f00;
-$backgroundColor: #eeeaea;
+$backgroundColor: #f0ecec;
 $progressBarBackgroundColor: #f1f1f1;
 $transparentBackground: transparent;
 $whiteColor: #fefefe;
