--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -14,7 +14,7 @@ html {
 
 body {
     height: 100%;
-    background-color: $backgroundColor;
+    background-color: $backgroundColor;  
 }
 //Containers
 .container {
@@ -276,6 +276,7 @@ svg {
     cursor: pointer;
 }
 
+//Playback Rate Container
 .playback-rate-buttons {
     margin-bottom: -8px;
     margin-left: 1.5%;
