added button for playback rate, rate reseting on refresh and play

--- a/assets/style/_variables.scss
+++ b/assets/style/_variables.scss
@@ -15,3 +15,9 @@ $font: 'Source Sans Pro', sans-serif;
 //RADIUS
 $smallBorderRadius: 4px;
 $biggerBorderRadius: 8px;
+
+//RESPONSIVNES
+
+$mobile: 375px;
+$tablet: 768px;
+$desktop: 1440px;
