--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -1,5 +1,24 @@
 @import 'variables';
 
+//Responsivnes
+@mixin tablet {
+    @media (min-width: #{$tablet}) {
+        @content;
+    }
+}
+
+@mixin mobile {
+    @media (max-width: #{$mobile}) {
+        @content;
+    }
+}
+
+@mixin desktop {
+    @media (max-width: #{$desktop}) {
+        @content;
+    }
+}
+
 //Global
 html {
     box-sizing: border-box;
@@ -135,6 +154,7 @@ progress {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-left: 2px;
 }
 
 //Left Controls
@@ -279,10 +299,15 @@ svg {
 //Playback Rate Container
 .playback-rate-buttons {
     margin-bottom: -8px;
-    margin-left: 1.5%;
     max-width: 100%;
     font-family: $font;
     font-size: 16px;
+    @include mobile() {
+        margin-left: 3%;
+    }
+    @include tablet() {
+        margin-left: 1.5%;
+    }
     button {
         color: $whiteColor;
         background: transparent;
@@ -295,8 +320,10 @@ svg {
         }
     }
     .playback {
-        color: $whiteColor;
-        font-family: $font;
+        
+    }
+    img {
+        background: transparent;
     }
 }
 
