bar width & skip to fix

--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -98,6 +98,8 @@ video {
     position: relative;
     height: 8px;
     margin-bottom: 10px;
+    width: 102.9%;
+    right: 10.9px;
 }
 
 progress {
